--- a/commonstyles.css
+++ b/commonstyles.css
@@ -58,8 +58,8 @@ body{
     color:#388bfd;
   }
 
-  .other-websites a{
-    color:rgb(77, 80, 83);;
+  .other-websites a {
+    color:rgb(77, 80, 83);
     text-decoration: none;
   }
 
