--- a/commonstyles.css
+++ b/commonstyles.css
@@ -69,8 +69,11 @@ body{
   }
 
   .navbar {
+    /*added flex wrap..change in all*/
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
         align-content: center;
         line-height: 45px;
         background-color: white;
@@ -137,12 +140,6 @@ body{
     
   }
 
-  @media screen and (max-width: 1124px) {
-    body {
-      font-size: 15px;
-    }
-
-  }
   @media screen and (max-width: 925px){
 
   textarea{
