--- a/commonstyles.css
+++ b/commonstyles.css
@@ -83,19 +83,12 @@ body{
         
   } 
 
-  /*.main-content{
+  .input-output{
     display:flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-   /* max-height: 600px;
-    min-height: 600px;
-    max-width: 600px;
-    min-width: 600px;
-    margin: 0 auto;
-    display:inline;
-    margin: 0 auto;
-  } */
+  }
 
   .dropdown-arrow{
     height: 10px;
@@ -140,11 +133,62 @@ body{
     
   }
 
-  @media screen and (max-width: 925px){
+  @media screen and (max-width: 1011px) {
+    
+    .content-info{
+      margin: auto;
+      max-width: 800px;    
+    }
+}
+
+@media screen and (max-width: 925px){
 
   textarea{
     height: 100px;
     width: 300px;
 
   }
+  .content-info{
+    margin: auto;
+    max-width: 500px;    
+  }
+}
+
+
+
+ @media screen and (max-width: 655px) {
+
+  textarea{
+    height: 70px;
+    width: 210px;
+
+  }
+  
+    .content-info{
+      margin: auto;
+      max-width: 400px;    
+    }
+}
+
+@media screen and (max-width: 475px) {
+
+  .input-output{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    max-width: 300px;
+    margin: auto;
+
+  }
+  
+    .content-info{
+      margin: auto;
+      max-width: 300px;    
+    }
+
+    #reset-button{
+      margin-top: 10px;
+      margin-left: 10px;
+    }
 }
