--- a/commonstyles.css
+++ b/commonstyles.css
@@ -181,14 +181,64 @@ body{
     margin: auto;
 
   }
+
+  textarea{
+    margin-left:30px;
+
+  }
   
     .content-info{
       margin: auto;
       max-width: 300px;    
     }
 
-    #reset-button{
+#encode-button,
+#decode-button,
+#generate-button,
+#convert-button ,
+#reset-button{
       margin-top: 10px;
-      margin-left: 10px;
+      padding: 7px ;
+    }
+
+    #reset-button{
+      margin-left: 7px;
+    }
+}
+
+
+@media screen and (max-width: 365px) {
+
+  .input-output{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    max-width: 300px;
+    margin: auto;
+
+  }
+
+  textarea{
+    margin-left:30px;
+
+  }
+  
+    .content-info{
+      margin: auto;
+      max-width: 300px;    
+    }
+
+#encode-button,
+#decode-button,
+#generate-button,
+#convert-button ,
+#reset-button{
+      margin-top: 10px;
+      padding: 2px ;
+    }
+
+    #reset-button{
+      margin-left: 7px;
     }
 }
