--- a/commonstyles.css
+++ b/commonstyles.css
@@ -32,6 +32,8 @@ body{
   font-family: inherit;
   
 }
+
+
   .dropdown-content a {
     display: block;
     text-decoration: none;
@@ -58,6 +60,10 @@ body{
     color:#388bfd;
   }
 
+  .dropdown-content a:hover{
+    background-color: #d4d4d4;
+  }
+
   .other-websites a {
     color:rgb(77, 80, 83);
     text-decoration: none;
@@ -74,7 +80,6 @@ body{
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
-        align-content: center;
         line-height: 45px;
         background-color: white;
         position: sticky;
@@ -133,12 +138,16 @@ body{
     
   }
 
+  
+
   @media screen and (max-width: 1011px) {
     
     .content-info{
       margin: auto;
       max-width: 800px;    
     }
+    
+    
 }
 
 @media screen and (max-width: 925px){
@@ -152,6 +161,7 @@ body{
     margin: auto;
     max-width: 500px;    
   }
+
 }
 
 
@@ -184,6 +194,7 @@ body{
 
   textarea{
     margin-left:30px;
+    margin-bottom: 20px;
 
   }
   
@@ -199,11 +210,10 @@ body{
 #reset-button{
       margin-top: 10px;
       padding: 7px ;
+      width : 80px;
     }
 
-    #reset-button{
-      margin-left: 7px;
-    }
+    
 }
 
 
@@ -236,9 +246,7 @@ body{
 #reset-button{
       margin-top: 10px;
       padding: 2px ;
+      width : 75px;
     }
 
-    #reset-button{
-      margin-left: 7px;
-    }
 }
