--- a/commonstyles.css
+++ b/commonstyles.css
@@ -17,6 +17,7 @@ body{
     cursor: pointer;
     border: none;
     font-family: inherit;
+    
         
 }
 
@@ -31,8 +32,17 @@ body{
   border: none;
   font-family: inherit;
   
+  
 }
 
+.util{
+  font-size: 30px;
+}
+
+#hamburger:active{
+  background-color:#d4d4d4;
+
+}
 
   .dropdown-content a {
     display: block;
@@ -44,35 +54,32 @@ body{
     color:#555555;
     background-color: #f6f8fa;
     box-shadow: 1px 2px 2px rgb(0 0 0 / 10%), -1px -1px 2px rgb(0 0 0 / 8%);
+    
   }
   
   .dropdown-content{
     display: none;
   }
+
+  .dropdown-content a:hover{
+    color:#388bfd;
+    background-color: #e7e7e7; 
+  }
   
   .dropdown-nav:hover .dropdown-content{
         display: block;
-        position: absolute;
+        position: absolute; 
+          
   } 
 
   .dropdown-nav:hover{
     cursor: pointer;
     color:#388bfd;
+    
   }
 
-  .dropdown-content a:hover{
-    background-color: #d4d4d4;
-  }
 
-  .other-websites a {
-    color:rgb(77, 80, 83);
-    text-decoration: none;
-  }
-
-  .other-websites a:hover{
-    color:#388bfd;
-    text-decoration:underline;
-  }
+  
 
   .navbar {
     /*added flex wrap..change in all*/
@@ -98,6 +105,11 @@ body{
   .dropdown-arrow{
     height: 10px;
     width: 10px
+  }
+
+  textarea{
+    padding: 10px;
+    border-radius: 5px;
   }
 
 
@@ -176,6 +188,10 @@ body{
 
 @media screen and (max-width: 475px) {
 
+
+  .util{
+    font-size: 22px;
+  }
   
   textarea{
     
