--- a/commonstyles.css
+++ b/commonstyles.css
@@ -12,11 +12,13 @@ body{
     color: #fff;
     font-size: 16px;
     line-height: 1.4;
-    padding: 10px 30px;
+    padding: 10px;
     border-radius: 3px;
     cursor: pointer;
     border: none;
     font-family: inherit;
+    min-width: 100px;
+    max-width: 100px;
     
         
 }
@@ -26,11 +28,13 @@ body{
   color: #fff;
   font-size: 16px;
   line-height: 1.4;
-  padding: 10px 30px;
+  padding: 10px;
   border-radius: 3px;
   cursor: pointer;
   border: none;
   font-family: inherit;
+  min-width: 100px;
+  max-width: 100px;
   
   
 }
